# EORA

./: .gitignore  README.md  data.py  giga.py  main.py  nlp_module.py  pyproject.toml
MyLibs/: aioclient.py  processor.py
