[project]
name = "eora"
version = "0.1.0"
description = ""
authors = [
    {name = "muhstefan",email = "muhstefang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "gigachat (>=0.1.42.post1,<0.2.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
